--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "url": "https://github.com/jverneaut/markdown-table-loader/issues"
   },
   "homepage": "https://github.com/jverneaut/markdown-table-loader#readme",
-  "dependencies": {
+  "devDependencies": {
     "jest": "^26.4.2"
   }
 }
